@@ -1,3 +1,9 @@
+2009-08-30  Russ Allbery  <rra@stanford.edu>
+
+	* ANSIColor.pm (colorvalid): New function to check whether an
+	attribute is known.
+	* t/basic.t: Test colorvalid.
+
 2009-07-04  Russ Allbery  <rra@stanford.edu>
 
 	* ANSIColor.pm: Add an example of checking color attributes by
